Closes #3 - added Linux client-support